[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Weapon/EnemyWeapon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Util/RandomMovementController.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/enemy.png" type="Texture" id=4]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2147483649
script = ExtResource( 1 )
MAX_HP = 15

[node name="EnemyWeapon" parent="." instance=ExtResource( 2 )]
scale = Vector2( 3, 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="RandomMovementController" parent="." instance=ExtResource( 3 )]
movement_range = 200
[connection signal="timeout" from="EnemyWeapon/Timer" to="." method="_on_Timer_timeout"]

[editable path="EnemyWeapon"]
